--- a/src/TeladeLogin.html
+++ b/src/TeladeLogin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body class="login-body">
   <div class="login-container">
@@ -15,7 +15,7 @@
       <button type="submit">Entrar</button>
     </form>
   </div>
-  <script src="login.js"></script>
+  <script src="/login.js"></script>
  
 <!-- VLibras -->
   <div vw class="enabled">
