--- a/Dashboard.html
+++ b/Dashboard.html
@@ -11,7 +11,7 @@
     <div class="logo">Controle Total</div>
     <nav>
       <a href="Aulas.html">Aulas</a>
-      <a href="#">Como Funciona</a>
+      <a href="ComoFunciona.html">Como Funciona</a>
       <a href="ControleDespesas.html">Controle suas despesas</a>
     </nav>
     <div class="user">Olá, <span id="userName"></span> 👋</div>
