Criação do btn voltar na Seção Como Funciona

--- a/ComoFunciona.html
+++ b/ComoFunciona.html
@@ -44,6 +44,21 @@
                 font-size: 1.5rem;
             }
         }
+
+        .btn-voltarC {
+            background: #40916c;
+            color: #fff;
+            border: none;
+            padding: 12px 28px;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.2s;
+        }
+        .btn-voltarC:hover {
+            background: #26734d;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +76,10 @@
         <p>
             Dessa forma, você tem mais controle sobre seu dinheiro, identifica oportunidades de economia e toma decisões financeiras mais conscientes.
         </p>
+        
+        <a href="Dashboard.html" class="btn-voltarC">Voltar </a>
+
+
         <div class="video-wrapper">
             <!-- Cole aqui o código de incorporação do vídeo do YouTube -->
             <!-- Exemplo:
@@ -68,5 +87,7 @@
             -->
         </div>
     </div>
+
+    
 </body>
 </html>
