--- a/Aulas.html
+++ b/Aulas.html
@@ -116,5 +116,17 @@
         // Chama a função para criar os cards quando a página é carregada
         document.addEventListener('DOMContentLoaded', createCategoryCards);
     </script>
+
+    <!-- VLibras -->
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
 </body>
 </html>
