--- a/Dica2.html
+++ b/Dica2.html
@@ -55,5 +55,17 @@
         </p>
         <a href="Dashboard.html" class="btn">Voltar para o Dashboard</a>
     </div>
+
+    <!-- VLibras -->
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
 </body>
 </html>
