--- a/Dica3.html
+++ b/Dica3.html
@@ -58,5 +58,17 @@ Pode parecer difícil no começo, mas com organização dá certo. Priorize o qu
         </p>
         <a href="Dashboard.html" class="btn-dashboard">Ir para o Dashboard</a>
     </div>
+
+    <!-- VLibras -->
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
 </body>
 </html>
