--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="login-container">
     <h1>Login</h1>
     <form id="loginForm">
-      <input type="text" id="userName" placeholder="Nome de usuário" required>
+      <input type="text" id="username" placeholder="Nome de usuário" required>
       <input type="password" id="password" placeholder="Senha" required>
       <button type="submit">Entrar</button>
     </form>
