--- a/Dashboard.html
+++ b/Dashboard.html
@@ -83,5 +83,8 @@
   <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
+
+  <script src="dashboard.js"></script>
+
 </body>
 </html>
